--- a/AnnouncementBoard/requirements.txt
+++ b/AnnouncementBoard/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 Django==4.2.1
 django-allauth==0.54.0
 django-filter==23.2
+django-tinymce==3.6.1
 idna==3.4
 oauthlib==3.2.2
 pycparser==2.21
