--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "test",
   "main": "script.js",
   "scripts": {
+    "lint": "eslint --debug src/",
+    "lint:write": "eslint --debug src/ --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack",
+    "dev": "webpack --mode development",
     "start:dev": "webpack serve --config webpack.config.js",
     "build": "webpack --mode production"
   },
@@ -13,13 +15,27 @@
     "type": "git",
     "url": "Skilfaktory"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint:write",
+      "pre-push": "YOUR_COMMAND_HERE"
+    }
+  },
   "author": "C0nstant1n",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@babel/preset-env": "^7.22.14",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
