--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "author": "C0nstant1n",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.22.11",
+    "@babel/core": "^7.22.15",
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-env": "^7.22.14",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
