--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "eslint --debug src/",
     "lint:write": "eslint --debug src/ --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
-    "start:dev": "webpack serve --config webpack.config.js",
+    "start:dev": "webpack serve --config webpackdev.config.js",
+    "start:prod": "webpack serve --config webpackprod.config.js",
     "build": "webpack --mode production",
     "prepare": "husky install"
   },
