--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --debug src/",
     "lint:write": "eslint --debug src/ --fix",
     "dev": "webpack --mode development",
-    "start:dev": "webpack serve --config webpack.config.js",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "prepare": "husky install"
   },
@@ -36,17 +36,16 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "filemanager-webpack-plugin": "^8.0.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "loader": "^2.1.1",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.3",
-    "pug": "^3.0.2",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
